# herb_description

./: .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  LICENSE.gpl  Makefile  README.md  manifest.xml  package.xml  urdf_to_openrave.cmake
.ci/: after_failure.sh  before_install.sh  env.list  install.sh  script.sh
.ci/docker/: ubuntu-bionic
camera/kinect2/502845441942/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
config/: bh280_extra.urdf.xacro  bh280_params.urdf.xacro  collision_primitives.json  herb_kinbody.yaml  herb_params.urdf.xacro  wam_params.urdf.xacro  wam_template.xml
launch/: display.launch
meshes/: finger0_0.STL  finger0_0.dae  finger0_1.dae  finger0_2.STL  finger0_2.dae  finger1_0.dae  finger1_1.dae  finger1_2.STL  finger1_2.dae  finger2_1.dae  finger2_2.dae  hand_base.STL  hand_base.dae  head_pan.STL  head_tilt.STL  head_wam1.STL  head_wam1.dae  head_wam1_collision.STL  head_wam2.STL  head_wam2.dae  head_wam2_collision.STL  herb_base.STL  herb_base.dae  herb_base_collision.STL  segway_wheel_left.dae  segway_wheel_right.STL  segway_wheel_right.dae  segway_wheel_right_collision.STL  wam1.dae  wam2.dae  wam3.dae  wam4.STL  wam4.dae  wam5.dae  wam6.STL  wam6.dae  wam7.STL  wam7.dae  wam_base.dae
meshes/base/: herb_base.STL  herb_base_collision.STL  herb_frame_collision.STL  herb_neobotix_base_collision.STL
meshes/bh282/: hand_base.stl  perception_palm.stl
meshes/head/: head_wam1.STL  head_wam2_collision.STL  herb_crl_head_collision.STL  herb_kinect.STL  herb_kinect_collision.STL  herb_neck_pan.STL  herb_neck_pan_collision.STL  herb_neck_tilt.STL  herb_neck_tilt_collision.STL  herb_realsense.STL  herb_realsense_collision.STL
meshes/segway/: segway_wheel_left.STL  segway_wheel_right.dae
ordata/robots/: bh280.robot.xml  herb.robot.xml
robots/: BHD280_URDF.URDF  BHD_URDF_280.URDF  HERB_BASE_URDF.URDF  WAM_URDF.URDF  barretthand_macro.srdf.xacro  bh280.urdf.xacro  bh280_standalone.srdf.xacro  bh280_standalone.urdf.xacro  bh282.urdf.xacro  bh282_standalone.srdf.xacro  bh282_standalone.urdf.xacro  fixed_transforms.urdf.xacro  herb.srdf.xacro  herb.urdf.xacro  herb_base.urdf.xacro  wam.urdf.xacro  wam_bh280_standalone.urdf.xacro  wam_bh282_standalone.urdf.xacro  wam_wsg50_standalone.urdf.xacro  wsg50.urdf.xacro  wsg50_macro.srdf.xacro  wsg50_standalone.srdf.xacro  wsg50_standalone.urdf.xacro
scripts/: postprocess_params.py  postprocess_sw2urdf.py  postprocess_xacro.py
