<package>
    <name>herb_description</name>
    <version>1.0.0</version>
    <description>
        This package contains a model of HERB, a bimanual mobile manipulation
        designed and built by the Personal Robotics Lab at Carnegie Mellon
        University.
    </description>
    <maintainer email="mkoval@cs.cmu.edu">Michael Koval</maintainer>
    <author email="mkoval@cs.cmu.edu">Michael Koval</author>
    <author email="mdawsonh@cs.cmu.edu">Michael Dawson-Haggerty</author>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>xacro</build_depend>
    <build_depend>collada_urdf</build_depend>
</package>
