<package>
    <name>herb_description</name>
    <version>1.2.0</version>
    <description>
        This package contains a model of HERB, a bimanual mobile manipulation
        designed and built by the Personal Robotics Lab at Carnegie Mellon
        University.
    </description>
    <maintainer email="mkoval@cs.cmu.edu">Michael Koval</maintainer>
    <author email="mkoval@cs.cmu.edu">Michael Koval</author>
    <author email="mdawsonh@cs.cmu.edu">Michael Dawson-Haggerty</author>
    <author email="vandeweg@cmu.edu">Mike Vande Weghe</author>
    <author email="awalsman@cs.cmu.edu">Aaron Walsman</author>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>xacro</buildtool_depend>
    <buildtool_depend>python-argparse</buildtool_depend>
    <buildtool_depend>python-lxml</buildtool_depend>
    <buildtool_depend>python-simplejson</buildtool_depend>
    <buildtool_depend>rosbash</buildtool_depend>
</package>
